# opqbox1

./: .gitignore  Readme.md  apt-bootstrap.sh  usbd.sh
Gen1/: Readme.md
Gen2/: Readme.md
OPQBox1/schematics/: OPQBox1-cache.lib  OPQBox1.lib  OPQBox1.pro  OPQBox1.sch  isolation.sch  opq2.sch
Ohm1/: ohm1.pcb  ohm1.sch
Ohm1/Libraries/: default.pt9  kip2.ln9  kip2.pd9  kip2.pt9
Ohm1/gerbers/: bottom-copper.GBL  bottom-pastemask.GBP  bottom-silkscreen.GBO  bottom-soldermask.GBS  drill.DRL  top-copper.GTL  top-pastemask.GTP  top-silkscreen.GTO  top-soldermask.GTS
msp-firmware/: background.c  main.c  setup.c  setup.h
rpi-firmware/linux/libelelo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  elelo-bin  elelo.files  elelo.includes  main.cpp
rpi-firmware/linux/libelelo/lib/: eleo_socket.hpp
rpi-firmware/linux/libelelo/src/: eleo_socket.cpp
rpi-firmware/rpid/: .uartread.cpp.swp  Makefile  Makefile~  acquisitiontask.cpp  acquisitiontask.hpp  coresettings.cpp  coresettings.hpp  data.txt  datastructures.hpp  example-settings.set  main.cpp  opqd  opqd.sh  opqwebsocket.cpp  opqwebsocket.cpp.autosave  opqwebsocket.hpp  rmsVoltage.hpp  rpi-bootstrap.sh  rpid.creator.user.37f1d07.2.6pre1  rpid.files  settings.set  settings2.set  uartread.cpp  uartread.hpp  usbd.sh
rpi-firmware/rpid/config/: config.ini  config.py  usbd.sh  wifi-config.py
rpi-firmware/rpid/contrib/: base64.hpp
rpi-firmware/rpid/lib/: acquisitiontask.hpp  analysistask.hpp  coredataqueue.hpp  coresettings.hpp  opqjson.h  (+11 more)
wifi-config/: wifi-config.py  wpa_supplicant.wpa.conf.template
(+30 files in other folders)
